syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.bobr;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.bobr.grpc";
option java_outer_classname = "BobrUserDataProto";

service BobrUserDataService {
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  bytes id = 1;
  string username = 2;
  string email = 3;
  string firstname = 4;
  string lastname = 5;
}